[gd_scene load_steps=8 format=2]

[ext_resource path="res://Sprites/Boom/1.6.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Boom.gd" type="Script" id=2]
[ext_resource path="res://Sprites/Boom/1.7.png" type="Texture" id=7]
[ext_resource path="res://Sprites/Boom/3.png" type="Texture" id=8]
[ext_resource path="res://Sprites/Boom/2.png" type="Texture" id=9]

[sub_resource type="CircleShape2D" id=1]
radius = 161.56

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 1 ), ExtResource( 7 ), ExtResource( 9 ), ExtResource( 8 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[node name="Boom" type="Area2D"]
script = ExtResource( 2 )

[node name="Collision" type="CollisionShape2D" parent="."]
position = Vector2( 5, -13 )
shape = SubResource( 1 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( -15.4078, 12.9852 )
scale = Vector2( 2.14576, 2.19901 )
z_index = 2
frames = SubResource( 2 )

[node name="TimerEnd" type="Timer" parent="."]

[connection signal="body_entered" from="." to="." method="_on_Boom_body_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
[connection signal="timeout" from="TimerEnd" to="." method="_on_TimerEnd_timeout"]
